deploy novos registros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8081
 spring.profiles.active=test
+spring.datasource.url=* spring.datasource.username=* spring.datasource.password=* #Conflicts with heroku so have to comment out #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect spring.jpa.hibernate.ddl-auto=update #Change from never to always in order to add data from .sql to db spring.datasource.initialization-mode=never spring.data=data.sql spring.datasource.max-active=3; server.port=${PORT:8080}
